<resources>
    <string name="app_name">Flogger Fitness Logger</string>
    <string name="button_save_routine_text">Save</string>
    <string name="button_edit_text">Edit</string>
    <string name="button_delete_text">Delete</string>
    <string name="textview_set_recyclerview">Sets</string>
    <string name="button_routine_name">Routine Name</string>
    <string name="fab_add_routine">Add Routine</string>
    <string name="fab_update_routine">Update Routine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_update_set">Update Set</string>
    <string name="edittext_set_performOrder">Perform Order</string>
    <string name="edittext_set_exercise">Exercise</string>
    <string name="edittext_set_goal">Goal</string>
    <string name="edittext_routine_name">Name</string>
    <string name="fab_add_set">Add Set</string>
    <string name="til_set_exerciseType">Exercise Type</string>
    <string name="textview_recyclerview_heading_routines">Routines</string>
    <string name="confirm_exit">Are you sure you want to exit Flogger?</string>
    <string name="exit_button">Exit</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_exit_cancel">Cancel</string>
    <string name="confirm_exit_exit">Exit</string>
    <string name="textview_confirm_exit_heading">Are you sure you want to exit Flogger?</string>
    <string name="complete_set">Complete Set</string>
    <string name="play_and_pause_timer">Play and Pause Timer</string>
    <!--    <string name="routine_tab_text">Routines</string>
    <string name="history_tab_text">History</string>-->
</resources>